deploy/k8s/openclaw.yaml
apiVersion: v1
kind: Service
metadata:
  name: openclaw-gateway
spec:
  type: NodePort
  selector:
    app: openclaw
  ports:
    - name: gateway
      port: 18789
      targetPort: 18789 
      nodePort: 31889 # should be auto-assigned, put here for easy access for tutorial
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openclaw-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openclaw
  template:
    metadata:
      labels:
        app: openclaw
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: openclaw-gateway
          image: openclaw:local
          imagePullPolicy: IfNotPresent
          command: ["node","openclaw.mjs","gateway","--bind","lan","--port","18789","--allow-unconfigured"]
          ports:
            - name: gateway
              containerPort: 18789
            - name: bridge
              containerPort: 18790
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /health
              port: 18789
          livenessProbe:
            httpGet:
              path: /health
              port: 18789
          securityContext:
            runAsUser: 1000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: openclaw-data
        - name: config
          configMap:
            name: openclaw-config
